# recon_jax

./: .gitignore  README.md  bootstrap.py  demo.ipynb  env.sh  env_rocm.sh  pyproject.toml  requirements.txt
examples/: C3D.ipynb  demo.py
recon_jax/: __init__.py  config.py  coords.py  cosmology.py  forward.py  galaxy.py  loss.py  painting.py  reconstruct.py
recon_jax.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
