[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recon_jax"
version = "0.1.0"
description = "JAX/JaxPM differentiable density-field reconstruction from galaxy surveys (spec-z / photo-z), with a Poisson likelihood and RSD."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Zihao" }]
dependencies = [
    "jax>=0.4",
    "jaxlib>=0.4",
    "jax-cosmo>=0.1",
    "jaxpm>=0.1",
    "diffrax>=0.5",
    "optax>=0.2",
    "numpy>=1.24",
]

[project.optional-dependencies]
demo = ["matplotlib>=3.6"]

[tool.setuptools.packages.find]
where = ["."]
include = ["recon_jax*"]
